--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script>
   // === CONFIG ===
   // Point this at your proxy (see options below).
-  const PROXY_URL = "YOUR_PROXY_URL_HERE"; // e.g., /api/ghost on Vercel/Netlify/Worker
+  const PROXY_URL = "https://icy-field-7749.alexmkennell.workers.dev/"; // e.g., /api/ghost on Vercel/Netlify/Worker
 
   // === Speech-to-text (browser) ===
   const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
