--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bob the Hayfield Skeleton</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bob the Skeleton</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script defer src="bob.js"></script>
   <style>
     body {
       margin: 0;
-      background: black;
+      background: radial-gradient(circle at center, #0a0a0a, #000);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: hidden;
     }
     model-viewer {
       width: 80vw;
       height: 90vh;
+      --poster-color: transparent;
     }
   </style>
 </head>
 <body>
   <model-viewer
     id="bob"
-    src="models/bob_idle.glb"
+    src="models/idle.glb"
     autoplay
     camera-controls
-    shadow-intensity="1"
     disable-zoom
+    shadow-intensity="1"
     environment-image="neutral">
   </model-viewer>
 </body>
