--- a/index.html
+++ b/index.html
@@ -2,53 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bob the Hayfield Skeleton</title>
+  <title>Bob the Skeleton</title>
+  <script type="module" src="main.js"></script>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  <script defer src="bob.js"></script>
   <style>
     body {
       margin: 0;
-      background: radial-gradient(circle at center, #0a0a0a, #000);
+      background: black;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       overflow: hidden;
-      cursor: pointer;
     }
     model-viewer {
       width: 80vw;
       height: 90vh;
-      --poster-color: transparent;
-    }
-    #prompt {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      color: #9efb9a;
-      font-family: monospace;
-      background: rgba(0,0,0,0.6);
-      padding: 10px 18px;
-      border-radius: 8px;
-      font-size: 1rem;
-      text-align: center;
-      user-select: none;
     }
   </style>
 </head>
 <body>
   <model-viewer
     id="bob"
-    src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/Animation_Sleep_Normally_withSkin.glb"
+    src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
     autoplay
     camera-controls
-    disable-zoom
     shadow-intensity="1"
-    environment-image="neutral"
-    alt="Bob the Hayfield Skeleton">
+    disable-zoom
+    environment-image="neutral">
   </model-viewer>
-  <div id="prompt">💀 Tap anywhere to talk to Bob 💀</div>
 </body>
 </html>
