--- a/index.html
+++ b/index.html
@@ -2,60 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Skeleton</title>
-
-  <!-- Model Viewer -->
-  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-
-  <!-- Your Script -->
   <script type="module" src="bob.js"></script>
-
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <style>
     body {
+      background: black;
+      color: limegreen;
+      text-align: center;
       margin: 0;
-      background: radial-gradient(circle at center, #060606, #000);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-      font-family: monospace;
-      color: #aaf0aa;
     }
     model-viewer {
-      width: 80vw;
-      height: 90vh;
-      --poster-color: transparent;
-    }
-    #prompt {
-      position: absolute;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.6);
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-size: 1rem;
-      text-align: center;
-      user-select: none;
+      width: 100vw;
+      height: 100vh;
+      background: transparent;
     }
   </style>
 </head>
-
 <body>
-  <model-viewer
-    id="bob"
-    src="https://bob-assets.alexmkennell.workers.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
-    autoplay
+  <model-viewer id="bob"
+    src="https://ghostaiv1.alexmkennell.workers.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
+    alt="Bob the Skeleton"
     camera-controls
-    disable-zoom
+    autoplay
     shadow-intensity="1"
-    environment-image="neutral"
-    alt="Bob the Skeleton">
-  </model-viewer>
-
-  <div id="prompt">💀 Tap anywhere to talk to Bob 💀</div>
+    exposure="1.2"
+  ></model-viewer>
 </body>
 </html>
-
