--- a/index.html
+++ b/index.html
@@ -2,31 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Bob the Skeleton</title>
-  <script type="module" src="bob.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bob the Mischievous Skeleton</title>
+
+  <!-- Google Model Viewer -->
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
   <style>
-    body {
-      background: black;
-      color: limegreen;
-      text-align: center;
+    html, body {
       margin: 0;
+      padding: 0;
+      background: black;
+      overflow: hidden;
+      height: 100%;
     }
     model-viewer {
       width: 100vw;
       height: 100vh;
+      background: radial-gradient(#0a0a0a, #000);
+    }
+    .prompt {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(20,20,20,0.8);
+      color: #00ff9d;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-family: monospace;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+    }
+    input {
       background: transparent;
+      border: 1px solid #00ff9d;
+      color: #00ff9d;
+      padding: 5px 10px;
+      border-radius: 5px;
+      outline: none;
+      width: 220px;
+    }
+    button {
+      background: #00ff9d;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <model-viewer id="bob"
-    src="https://ghostaiv1.alexmkennell.workers.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
+  <model-viewer
+    id="bob"
+    src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
     alt="Bob the Skeleton"
-    camera-controls
     autoplay
+    camera-controls
+    exposure="1"
     shadow-intensity="1"
-    exposure="1.2"
+    animation-name="Animation_Long_Breathe_and_Look_Around_withSkin"
   ></model-viewer>
+
+  <div class="prompt">
+    <input type="text" id="userInput" placeholder="Say something to Bob..." />
+    <button id="sendBtn">Talk</button>
+  </div>
+
+  <script src="bob.js"></script>
 </body>
 </html>
