--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
   </style>
 </head>
 <body>
-  <model-viewer
-    id="bob"
-    src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
-    alt="Bob the Skeleton"
-    autoplay
-    camera-controls
-    exposure="1"
-    shadow-intensity="1"
-    animation-name="Animation_Long_Breathe_and_Look_Around_withSkin"
-  ></model-viewer>
+<model-viewer
+  id="bobModel"
+  src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
+  alt="Bob the Skeleton"
+  autoplay
+  camera-controls
+  exposure="1"
+  shadow-intensity="1"
+  animation-name="Animation_Long_Breathe_and_Look_Around_withSkin"
+></model-viewer>
 
   <div class="prompt">
     <input type="text" id="userInput" placeholder="Say something to Bob..." />
