--- a/index.html
+++ b/index.html
@@ -36,121 +36,6 @@
   ></model-viewer>
   <div id="status">Loading Bob…</div>
 
-  <script>
-    const bob = document.getElementById("bob");
-    const status = document.getElementById("status");
-
-    // Optional proxy to fix CORS
-    const workerURL = "https://ghostaiv1.alexmkennell.workers.dev/";
-    const proxyURL = `https://corsproxy.io/?${workerURL}`;
-
-    bob.addEventListener("load", () => {
-      console.log("✅ Bob ready");
-      status.textContent = "🎙 Say somethin’, partner…";
-      startVoiceRecognition();
-    });
-
-    function playAnimation(name) {
-      if (!bob) return;
-      bob.animationName = name;
-    }
-
-    function startVoiceRecognition() {
-      const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-      if (!SpeechRecognition) {
-        status.textContent = "❌ No speech recognition support.";
-        return;
-      }
-      const recognition = new SpeechRecognition();
-      recognition.lang = "en-US";
-      recognition.continuous = true;
-      recognition.interimResults = false;
-
-      recognition.onstart = () => {
-        console.log("🎙 Listening...");
-        status.textContent = "👂 Listening...";
-      };
-
-      recognition.onresult = (event) => {
-        const transcript = event.results[event.resultIndex][0].transcript.trim();
-        console.log("You said:", transcript);
-        status.textContent = `💬 “${transcript}”`;
-        recognition.stop();
-        talkToBob(transcript);
-      };
-
-      recognition.onerror = (e) => {
-        console.warn("Speech error:", e);
-        status.textContent = "⚠️ Mic issue.";
-      };
-
-      recognition.onend = () => setTimeout(() => recognition.start(), 1500);
-      recognition.start();
-    }
-
-    async function talkToBob(userInput) {
-      try {
-        playAnimation("Animation_Long_Breathe_and_Look_Around_withSkin");
-        const response = await fetch(proxyURL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt: userInput }),
-        });
-        if (!response.ok) throw new Error(`HTTP ${response.status}`);
-        const data = await response.json();
-        const reply = data.reply || "(spooky silence…)";
-
-        console.log("💀 Bob:", reply);
-        status.textContent = reply;
-
-        // --- SPEECH: Raspy Cowboy ---
-        const speech = new SpeechSynthesisUtterance(reply);
-        const voice = speechSynthesis.getVoices().find(v =>
-          v.name.includes("David") || v.name.includes("Google US English")
-        ) || speechSynthesis.getVoices()[0];
-        speech.voice = voice;
-        speech.rate = 0.8;
-        speech.pitch = 0.6;
-        speech.volume = 1.0;
-
-        // Lip sync variables
-        const animLoop = setInterval(() => {
-          const rand = Math.random();
-          if (rand > 0.5) bob.animationName = "Animation_Long_Breathe_and_Look_Around_withSkin";
-          else bob.animationName = "";
-        }, 120);
-
-        speech.onstart = () => {
-          const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-          const bufferSize = 2 * audioCtx.sampleRate;
-          const noiseBuffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
-          const output = noiseBuffer.getChannelData(0);
-          for (let i = 0; i < bufferSize; i++) output[i] = Math.random() * 0.1 - 0.05;
-          const noise = audioCtx.createBufferSource();
-          noise.buffer = noiseBuffer;
-          const gainNode = audioCtx.createGain();
-          gainNode.gain.value = 0.02;
-          noise.connect(gainNode).connect(audioCtx.destination);
-          noise.start();
-          speech._noise = { audioCtx, noise };
-        };
-
-        speech.onend = () => {
-          if (speech._noise) {
-            speech._noise.noise.stop();
-            speech._noise.audioCtx.close();
-          }
-          clearInterval(animLoop);
-          playAnimation("Animation_Long_Breathe_and_Look_Around_withSkin");
-          setTimeout(() => status.textContent = "🎙 Say somethin’ else, cowboy…", 500);
-        };
-
-        speechSynthesis.speak(speech);
-      } catch (err) {
-        console.error("Error talking to Bob:", err);
-        status.textContent = "💀 Bob’s connection got spooked.";
-      }
-    }
-  </script>
+  <script type="module" src="./bob.js"></script>
 </body>
 </html>
