--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 </head>
 <body>
  <model-viewer
+   <!-- Transparent full-screen overlay for the wake-up click -->
+<div id="wakeOverlay"
+     style="position:fixed;top:0;left:0;width:100%;height:100%;
+            background:rgba(0,0,0,0);
+            cursor:pointer;z-index:9999;"
   id="bob"
   src="https://pub-30bcc0b2a7044074a19efdef19f69857.r2.dev/models/Animation_Long_Breathe_and_Look_Around_withSkin.glb"
   alt="Bob the Skeleton"
