--- a/index.html
+++ b/index.html
@@ -13,33 +13,24 @@
       text-align: center;
       color: #b8ffb8;
       font-family: monospace;
+      min-height: 100vh;
+      position: relative;
     }
     model-viewer {
       width: 100vw;
       height: 90vh;
     }
     #status {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      transition: opacity 0.6s ease;
-    }
-    #startPrompt {
       position: absolute;
-      top: 40%;
+      bottom: 24px;
       left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0, 0, 0, 0.8);
-      border: 1px solid #b8ffb8;
-      color: #b8ffb8;
-      padding: 1rem 2rem;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 1.1rem;
-      z-index: 10;
-      transition: opacity 0.5s ease, transform 0.3s ease;
-    }
-    #startPrompt:hover {
-      transform: translate(-50%, -50%) scale(1.05);
+      transform: translateX(-50%);
+      padding: 0.75rem 1.5rem;
+      border-radius: 999px;
+      background: rgba(0, 0, 0, 0.65);
+      font-size: 1rem;
+      letter-spacing: 0.03em;
+      transition: opacity 0.6s ease;
     }
   </style>
 </head>
@@ -56,146 +47,8 @@
   disable-zoom
   disable-tap
 ></model-viewer>
-
-<!-- Transparent full-screen overlay for the wake-up click -->
-<div id="wakeOverlay"
-     style="position:fixed;top:0;left:0;width:100%;height:100%;
-            background:rgba(0,0,0,0);
-            cursor:pointer;z-index:9999;">
-</div>
-
-
   <div id="status">Loading Bob…</div>
-  <div id="startPrompt">👆 Click to wake Bob up</div>
 
-  <script type="module">
-    const bob = document.getElementById("bob");
-    const status = document.getElementById("status");
-    const promptBox = document.getElementById("startPrompt");
-    const WORKER_URL = "https://ghostaiv1.alexmkennell.workers.dev";
-
-    const sleep = (ms) => new Promise((res) => setTimeout(res, ms));
-    
-const overlay = document.getElementById("wakeOverlay");
-
-overlay.addEventListener("click", async () => {
-  console.log("🖱️ Wake click detected");
-  overlay.remove(); // Remove overlay so user can move Bob later
-  try { await new Audio().play().catch(() => {}); } catch {}
-  await wakeSequence(true);
-});
-
-    async function playAnimation(name, duration = 2500) {
-      if (!bob) return;
-      bob.animationName = name;
-      await sleep(duration);
-      bob.animationName = "Animation_Long_Breathe_and_Look_Around_withSkin";
-    }
-
-    function startVoiceRecognition() {
-      const SpeechRecognition =
-        window.SpeechRecognition || window.webkitSpeechRecognition;
-      if (!SpeechRecognition) {
-        status.textContent = "❌ Speech recognition not supported.";
-        return;
-      }
-
-      const recognition = new SpeechRecognition();
-      recognition.lang = "en-US";
-      recognition.continuous = true;
-      recognition.interimResults = false;
-
-      recognition.onstart = () => (status.textContent = "👂 Listening…");
-
-      recognition.onresult = async (event) => {
-        const transcript =
-          event.results[event.results.length - 1][0].transcript.trim();
-        if (!transcript) return;
-        status.textContent = `💬 “${transcript}”`;
-        recognition.stop();
-        await talkToBob(transcript);
-      };
-
-      recognition.onerror = () => (status.textContent = "⚠️ Mic error.");
-      recognition.onend = () => setTimeout(() => recognition.start(), 1500);
-      recognition.start();
-    }
-
-    async function talkToBob(userInput) {
-      try {
-        console.log("🎙️ User:", userInput);
-        await playAnimation("Animation_Talk_Passionately_withSkin", 1000);
-
-        // Step 1 — Get chat reply
-        const chatResp = await fetch(`${WORKER_URL}/`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt: userInput }),
-        });
-        if (!chatResp.ok) throw new Error("Chat request failed");
-        const { reply } = await chatResp.json();
-        console.log("💀 Bob:", reply);
-        status.textContent = reply || "(skeletal silence…)";
-
-        // Step 2 — Get TTS from Worker
-        const ttsResp = await fetch(`${WORKER_URL}/tts`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ text: reply, voice: "alloy" }),
-        });
-        if (!ttsResp.ok) throw new Error(`TTS failed: ${ttsResp.status}`);
-
-        const blob = await ttsResp.blob();
-        const url = URL.createObjectURL(blob);
-        const audio = new Audio(url);
-        console.log("🎧 Playing Alloy TTS:", url);
-
-        audio.onplay = () =>
-          (bob.animationName = "Animation_Talk_Passionately_withSkin");
-        audio.onended = () =>
-          (bob.animationName = "Animation_Long_Breathe_and_Look_Around_withSkin");
-
-        try {
-          await audio.play();
-        } catch (err) {
-          console.warn("⚠️ Autoplay blocked. Waiting for user click.");
-          status.textContent = "👆 Click anywhere to let Bob speak.";
-          document.body.addEventListener(
-            "click",
-            () => {
-              audio.play();
-              status.textContent = "🎧 Bob's talkin’ now!";
-            },
-            { once: true }
-          );
-        }
-      } catch (err) {
-        console.error("💀 Error talking to Bob:", err);
-        status.textContent = "💀 Bob’s connection got spooked.";
-      }
-    }
-
-    // 🧠 Initialize
-    window.addEventListener("DOMContentLoaded", () => {
-      bob.addEventListener("load", () => {
-        console.log("✅ Bob ready!");
-        status.textContent = "🎙 Say somethin’, partner…";
-
-        // show prompt until user clicks
-        promptBox.style.opacity = 1;
-        promptBox.addEventListener("click", async () => {
-          promptBox.style.opacity = 0;
-          promptBox.style.pointerEvents = "none";
-          status.textContent = "🎧 Bob's wakin' up…";
-          try {
-            const clickSound = new Audio();
-            await clickSound.play().catch(() => {}); // primes audio permission
-          } catch {}
-          startVoiceRecognition();
-          setTimeout(() => (status.textContent = "🎙 Say somethin’, partner…"), 800);
-        });
-      });
-    });
-  </script>
+  <script type="module" src="./bob.js"></script>
 </body>
 </html>
