--- a/index.html
+++ b/index.html
@@ -21,19 +21,22 @@
       height: 90vh;
     }
     model-viewer {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      opacity: 0;
-      transition: opacity var(--fade-ms) ease;
-      will-change: opacity;
-      exposure: 0.9;
-      shadow-intensity: 0.2;
-      touch-action: none;
-    }
-    model-viewer.active { opacity: 1; }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 90vh;
+  opacity: 0;
+  transition: opacity 0.8s ease-in-out;
+}
+model-viewer.active {
+  opacity: 1;
+  z-index: 2;
+}
+model-viewer.inactive {
+  z-index: 1;
+}
+
     #status {
       height: 10vh;
       display: grid;
