--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
       width: 100vw;
       height: 90vh;
     }
-  model-viewer {
+  /* Sequential fade: the incoming model isn't visible until old one finishes fading out */
+model-viewer {
   position: absolute;
   inset: 0;
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: opacity 0.6s ease-in-out; /* match blendMs */
+  transition: opacity 0.6s ease-in-out; /* keep in sync with blendMs */
   will-change: opacity;
 }
-model-viewer.active {
-  opacity: 1;
-  z-index: 2; /* top when active */
-}
+model-viewer.active { opacity: 1; z-index: 2; }
+
 
 
     #status {
