--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bob the Bone Cowboy</title>
 
-  <!-- ✅ Load Three.js and FBXLoader first -->
- <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
-<script src="https://unpkg.com/three@0.160.0/examples/js/loaders/FBXLoader.js"></script>
+  <!-- ✅ Three.js + FBXLoader loaded FIRST as global -->
+  <script type="module">
+    import * as THREE from "https://unpkg.com/three@0.160.0/build/three.module.js";
+    import { FBXLoader } from "https://unpkg.com/three@0.160.0/examples/jsm/loaders/FBXLoader.js";
+    window.THREE = THREE;
+    THREE.FBXLoader = FBXLoader;
+  </script>
 
   <style>
     html, body {
@@ -15,22 +19,30 @@
       margin: 0;
       background: radial-gradient(circle at center, #0b0b0b 50%, #000 100%);
       color: #b8ffb8;
-      font-family: ui-monospace, monospace;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
       overflow: hidden;
     }
+    canvas {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+    }
     #status {
-      height: 10vh;
-      display: grid;
-      place-items: center;
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      right: 0;
+      text-align: center;
       font-size: 1rem;
-      opacity: 0.88;
+      opacity: 0.85;
       user-select: none;
     }
   </style>
 </head>
 <body>
-  <div id="status">Loading…</div>
-  <!-- ✅ Load Bob last -->
-  <script src="./bob.js"></script>
+  <div id="status">Loading Bob...</div>
+
+  <!-- ✅ Bob script runs AFTER global THREE loads -->
+  <script src="./bob.js" defer></script>
 </body>
 </html>
